--- a/index.html
+++ b/index.html
@@ -138,17 +138,17 @@
             </a>
           </div>
           <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+            <a href="07_index.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>07: CNC Milling, molding & casting</h3>
+                <h3>07: electronic output devices </h3>
               </div>
-              <img class="img-fluid" src="comingsoon.png">
+              <img class="img-fluid" src="07_outputs/thumbnail.jpg">
             </a>
           </div>
           <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>08: electronic output devices</h3>
+                <h3>08: CNC Milling, molding & casting</h3>
               </div>
               <img class="img-fluid" src="comingsoon.png">
             </a>
