Week 8 (in progress)
almost...

--- a/08_index.html
+++ b/08_index.html
@@ -75,84 +75,177 @@
     <section class="section">
       <div class="container">
         <div class="row mb-4 align-items-center">
-          <div class="col-md-6" data-aos="fade-up">
-            <h2>Work Single Page</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore.</p>
+          <div class="col-md-12" data-aos="fade-up">
+            <h2>08: CNC milling, molding and casting</h2>
+            <p>This week's assignments were a struggle for so many reasons. Each assignment took several iterations. So, this week's documentation is more of a documentation of my various fails...but hey, at least I learned a lot from them!</p>
           </div>
         </div>
       </div>
 
-      <div class="site-section pb-0">
-        <div class="container">
-          <div class="row align-items-stretch">
-            <div class="col-md-8" data-aos="fade-up">
-              <img src="assets/img/img_1_big.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
-              <div class="sticky-content">
-                <h3 class="h3">Boxed Water</h3>
-                <p class="mb-4"><span class="text-muted">Design</span></p>
 
-                <div class="mb-5">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores illo, id recusandae molestias
-                    illum unde pariatur, enim tempora.</p>
-
-                </div>
-
-                <h4 class="h4 mb-3">What I did</h4>
-                <ul class="list-unstyled list-line mb-5">
-                  <li>Design</li>
-                  <li>HTML5/CSS3</li>
-                  <li>CMS</li>
-                  <li>Logo</li>
-                </ul>
-
-                <p><a href="#" class="readmore">Visit Website</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-    </section>
-
-    <!-- ======= Testimonials Section ======= -->
-    <section class="section pt-0">
       <div class="container">
-
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial">
-                  <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid">
-                  <blockquote>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                      explicabo inventore.</p>
-                  </blockquote>
-                  <p>&mdash; Jean Hicks</p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial">
-                  <img src="assets/img/person_2.jpg" alt="Image" class="img-fluid">
-                  <blockquote>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                      explicabo inventore.</p>
-                  </blockquote>
-                  <p>&mdash; Chris Stanworth</p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <h3 class="h3">1. Milling a mold, casting and molding</h3>
+            <p>One of our assignments was to cast a mold. I was inspired by these adorable chopstick holders (partiuclarly the shiba inu one...)</p>
+            <p>Luckily, I was able to find a mesh model of a <a href="https://www.thingiverse.com/thing:2751011">shiba</a> on Thingaverse. I wanted the middle part of the dog to be the chopstick "rest", so I edited the mesh in Blender using the sculpt feature.</p>
           </div>
-          <div class="swiper-pagination"></div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_inspo.png" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_blender.png" alt="Image" class="img-fluid">
+          </div>
         </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p>I imported the .obj mesh file into Fusion360 and sliced the shiba in half as my plan was to create two half mold positives of the shiba and then put them together. I created a box around each half and added pegs/divots in each corner so I could align the molds later on.
+            </p>
+          </div>
+         <div class="col-md-8" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_fusion1.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p>I did a test mill on the SRM-20 milling machine using the 1/8" end mill. It worked fine - the wax positive was a bit ridged but the general shape was there.
+            </p>
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_waxtest1.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_waxtest2.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p>I did another print but it turned out too small. I also ran into several issues with the end mill falling out and the mill stopping halfway through so I had to restart several times. I also felt like the ridges were a bit too obvious with the 1/8" end mill so I tried switching to a 1/16" end mill. However, the end mill got jammed partway through and the machine stopped. I'm assuming this was either because the end mill couldn't go deep enough or there was something about the shape of my model that didn't work with the 1/16" bit. I ultimately ended up switching back to the 1/8" bit which was fine when I scaled the model up a bit.</p>
+            <p>Another issue I encounted was that the pegs/divots were too close to the edge of the box. It didn't appear that way in Fusion 360 but when it was milled, they were touching the edge of the box. Some of the divots also didn't show up. So, I repositioned the pegs/divots and increased the depth of the divots - it kind of worked.</p>
+            <p>Because I wasn't 100% confident that the milled mold would work, I also 3D printed the mold just in case.</p>
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_mods.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_wax2.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_3D2.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p>I was pretty happy with the way the mold positives turned out! The 3D printed mold positive clearly had a lot more detail and had undercuts, whereas the milled mold wasn't as precise and did not have undercuts.
+            </p>
+            <p>To create the actual mold, I used OOMOO®25 silicone rubber with a 1A:1B ratio. We were 9 hours into the process at this point, so I decided to call it a night and just let it cure overnight.</p>
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_mold1.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_mold2.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p>The next morning, I went back to the labs to take out the molds - they worked! But wait...ㅅurns out, I did the model incorrectly. I mirrored the pegs/divots, assuming I was supposed to if I were to put two halves of the molds together. What I really needed to do was to keep the pegs/divots in the same position and instead mirror the shiba. nooooooooooooooooooo...................asd;fljkfa;ldkjakds</p>
+          </div>
+         <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_mold3.jpg" alt="Image" class="img-fluid">
+            <figcaption>THE SILICONE WAS FLEXIBLE ENOUGH TO SURVIVE BEING TAKEN OUT OF THE 3D-PRINTED MOLD WITH UNDERCUTS</figcaption>
+          </div>
+         <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_mold4.jpg" alt="Image" class="img-fluid">
+            <figcaption>MOMENT OF DESPAIR. ABSOLUTELY NOTHING LINED UP.</figcaption>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p>But one must not give up that easily! I chatted with Nathan and he suggested that instead of using the divots, I could try creating a "lip" so that one mold would fit into the other mold. So remade the models and tried that...</p>
+            <p>Unfortunately, I messed up the first print (another 3 hours gone *cries*). I sized the boxes so that one would be larger than the other, but when I poured in the mold material, I realized that I also needed to extrude part of the box to actually create the "lip"...lol. It wasn't the biggest deal since I would still be able to put the two molds together, but I was a bit afraid that since it wasn't watertight, the casting material would leak out. So, I adjusted the model to account for the "lip" and 3D printed it (which, of course, failed halfway through...)</p>
+            <p>In the meantime, I added the mold material anyways, just in case the 3D failed again or I somehow messed up the model again. I used SORTA-Clear™ 37, which is a food safe translucent silicone rubber. I guess now I can make chopstick holders that are also edible...?</p>
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_fusion2.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_mold5.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_mold6.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p><center>SHIBA SAGA TO BE CONTINUED...</center></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <h3 class="h3">2. CNC Milling using ShopBot</h3>
+            <p>haha...the other epic struggle of the week! To be fair, I had a pretty ambitious design I wanted to mill so I definitely dug this hole for myself. The design had a lot of intricate details and I was told that this would not be possible...but of course I thought: "Challenge accepted!"</p>
+            <p>I spent some time in Rhino removing some details from the file that I thought would be too difficult to cut, given that we were using a 1/8" end mill on the ShopBot. All the curves were closed and I was hoping to engrave the wood. However, when I tried creating pocket toolpaths in Aspire, I got error messages saying that the toolpath could not be created. Eventually, I gave up on the pocket cuts...unless I took out almost all the detail, it wasn't possible to create the toolpaths :(</p>
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/bear_inspo.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/bear_aspire1.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p>Instead, I tried to do pocket cuts for all the curves. I also encountered issues here as some the curves were so close together that either the toolpath couldn't be calculated again, or I would lose so much detail that almost nothing would be cut. After hours of troubleshooting, I discovered that the solution was to get the machine to cut <i>on</i> the path as opposed to outside / inside the path. After securing a piece of OSB using the nail gun (which was oddly satisfying to use), I finally did my first test cut!</p>
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/bear_nail.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/bear_testcut1.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/bear_testcut2.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p><center>BEAR SAGA TO BE CONTINUED...</center></p>
+          </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
 
   </main><!-- End #main -->
   
