--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
               <img class="img-fluid" src="07_outputs/thumbnail.jpg">
             </a>
           </div>
-          <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="08_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>08: CNC Milling, molding & casting</h3>
               </div>
