--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <img class="img-fluid" src="06_sensors/thumbnail.jpg">
             </a>
           </div>
-          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="07_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>07: electronic output devices </h3>
@@ -150,7 +150,7 @@
               <div class="work-info">
                 <h3>08: CNC Milling, molding & casting</h3>
               </div>
-              <img class="img-fluid" src="comingsoon.png">
+              <img class="img-fluid" src="08_CNC/thumbnail.jpg">
             </a>
           </div>
           <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
