--- a/08_index.html
+++ b/08_index.html
@@ -77,7 +77,7 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-12" data-aos="fade-up">
             <h2>08: CNC milling, molding and casting</h2>
-            <p>This week's assignments were a struggle for so many reasons. So, this week's documentation is more of a documentation of my various fails...but hey, at least I learned a lot from them!</p>
+            <p>This week's assignments were a struggle for so many reasons. So, this is more of a documentation of my various failures...but hey, at least I learned a lot from them!</p>
           </div>
         </div>
       </div>
